# ctrl/model/security-zone.go
@@ -1,0 +1,6 @@
+package model
+
+type SecurityZone struct {
+	ID   string `json:"id" pg:"id,pk"`
+	Name string `json:"name" pg:"name"`
+}
